--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php" : ">=5.6.4",
-        "illuminate/queue": "^5.3"
+        "illuminate/queue": "5.3.*"
     },
     "autoload": {
         "psr-4": {
